--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -119,6 +119,19 @@ The "configfile" and "traplog" database tables are now deprecated. If you wish t
 
 Once completed, update the file /usr/local/pf/conf/currently-at to match the new release number (PacketFence 6.5.0).
 
+pfdetect.conf
+^^^^^^^^^^^^
+
+New parameters have been introduced in conf/pfdetect.conf
+Run the following script to add these parameters to pfdetect.conf
+
+   /usr/local/pf/addons/upgrade/to-6.5-pfdetect-conf.pl
+
+Default RoleMap for the switches
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+If you were using the default 'RoleMap = Y' in the conf/switches.conf it's disabled by default now. You will need to put 'RoleMap = Y' under your switches or switch group configuration.
+
 Upgrading from a version prior to 6.4.0
 ---------------------------------------
 
