--- a/docs/PacketFence_MSPKI_Quick_Install_Guide.asciidoc
+++ b/docs/PacketFence_MSPKI_Quick_Install_Guide.asciidoc
@@ -276,7 +276,7 @@ Configuring this has to be done in the 'Signing' tab in the "Apple devices".
 image::docs/images/packetfence-pki-eaptls-sign-example.png[scaledwidth="100%",alt="Signing provisioner"]
 
 Fill out the fields with the contents of the Base64 encoded certificates.
-To extract this information from a pem formatted certificate, copy the file content included between the begin and end tag, not including the delimiters themselves.
+To extract this information from a pem formatted certificate, copy the file content.
 
 Certificate file example:
 
@@ -287,7 +287,7 @@ zxcvbnmqwertyuiop78
 ----- END CERTIFICATE -----
 ----
 
-Copy everything between the BEGIN and END lines, but not the lines themselves.
+Copy everything from the BEGIN to END lines.
 Repeat this operation for the certificate key and intermediate certificate.
 
 ----
