--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+packetfence (6.5.1) unstable; urgency=low
+
+  * Version 6.5.1
+
+ -- Inverse <info@inverse.ca>  Thu, 23 Feb 2017 12:00:00 -0400
+
 packetfence (6.5.0) unstable; urgency=low
 
   * Version 6.5.0
